# NeuronalNetworkC-

./: README.md
NeuralNet/: CMakeLists.txt  README.MD
NeuralNet/examples/: xor_example.cpp
NeuralNet/include/neuralnet/: Activations.h  Layer.h  LossFunctions.h  Model.h  Neuron.h  Optimizers.h
NeuralNet/src/: Activations.cpp  Layer.cpp  LossFunctions.cpp  Model.cpp  Neuron.cpp  Optimizers.cpp
